# dagster-rs

./: .gitignore  =1.8  README.md  dbt_project.yml  engine.txt  model_helper.py  pyproject.toml  pyproject.toml.bak  readme.md  readme1.md  setup.py  train_model.py  tree.txt  workspace.yaml
environments/: local
models/: movies.sql  schema.yml  scores.sql  scores_movies_users.sql  sources.ym  sources.yml  users.sql
r_s/: engine.txt  pyproject.toml  setup.cfg  workspace.yaml
r_s/r_s/: .env  __init__.py  config.yml  configs.py  constants.py  definitions.py  sensor.py
r_s/r_s/assets/: __init__.py  dbt.py  movies_users.py  pru.py  train_model.py  training.py
