[tool.poetry]
name = "r_s"
version = "0.2.4"
description = "Proyecto MLOps Orquestacion"
authors = ["Jorge Aguirre <jorge-aguirre@outlook.com>"]
#package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dagster = "1.9.3"
dagster-webserver ="1.9.3"
dagster_mlflow = "*"
tensorflow = "^2.12.0"
airbyte-api = "*"
dagster-airbyte = "*"
dbt = "*"
dbt-core = "*"
dagster-dbt = "*"
dagster-postgres = "*"
